Quartz sync: Dec 7, 2023, 11:42 AM